--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finargo</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/favicon.ico">
+<!--  {% include 'invest/base/blocks/favicon_declaration.html' %}-->
+  <meta name="yandex-verification" content="8622685c28db44b3" />
+
+	<title>
+    Finargo - Финансовые новости, аналитика, инвестиции
+  </title>
+
+  <script type="module" src="src/main.ts" defer></script>
+
+<!--  <script type="module" src="{% static 'invest/js/base/nav-search.js' %}" defer></script>-->
+<!--  <script type="module" src="{% static 'invest/js/base/dropdown-menu.js' %}" defer></script>-->
+<!--  <script type="module" src="{% static 'invest/js/base/login-form.js' %}" defer></script>-->
+<!--  <script type="module" src="{% static 'invest/js/base/notification.js' %}" defer></script>-->
+<!--  <script type="module" src="{% static 'invest/js/base/modal-menu.js' %}" defer></script>-->
+</head>
+<body>
+  <div id="app"></div>
+
+<!--	{% include 'invest/base/blocks/initial_registration_form.html' %}-->
+<!--	{% include 'invest/base/blocks/registration_form.html' %}-->
+<!--	{% include 'invest/base/blocks/login_form.html' %}-->
+<!--  {% include 'invest/base/svg/icons.html' %}-->
+
+</body>
 </html>
