--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="yandex-verification" content="8622685c28db44b3" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/favicon.ico">
-<!--  {% include 'invest/base/blocks/favicon_declaration.html' %}-->
-  <meta name="yandex-verification" content="8622685c28db44b3" />
+    <script type="module" src="src/main.ts" defer></script>
+  </head>
 
-  <script type="module" src="src/main.ts" defer></script>
-</head>
-
-<body>
-  <div id="app"></div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
